--- a/home1.css
+++ b/home1.css
@@ -1,6 +1,6 @@
 body{
 	font-family : "Trebuchet MS", Verdana,sana-serif ;
-	font-size : 10vw;
+	font-size : 16px;
 	background-color :black;
 	padding : 100px;
 }
